# journal_app

./: .env  .gitignore  LICENSE.txt  Pipfile  Procfile  README.md  docker-compose.yml  manage.py  out.txt  potential_names.txt  pyproject.toml  test_app.py
webapp/webapp/: .flaskenv  __init__.py  __main__.py  extensions.py  pyproject.toml  views.py
webapp/webapp/journal_plugins/date_recognizer/: __init__.py  views.py
webapp/webapp/journal_plugins/example_plugin/: models.py
webapp/webapp/journal_plugins/name_search/: __init__.py
webapp/webapp/static/stylesheets/: default.css
webapp/webapp/templates/: home.html
webapp/webapp/webapp/: __init__.py  api.py  config.py  forms.py  models.py  views.py
webapp/webapp/webapp/alembic/versions/: 4093531d42dc_.py  b43ee08e0103_.py
webapp/webapp/webapp/journal_plugins/: __init__.py  classes.py  extensions.py  models.py  views.py
webapp/webapp/webapp/journal_plugins/date_recognizer/: test_date_recognizer.py  views.py
webapp/webapp/webapp/journal_plugins/indexer_plugin/: __init__.py  views.py
webapp/webapp/webapp/journal_plugins/mtg_cardfetcher/: __init__.py  models.py  views.py
webapp/webapp/webapp/journal_plugins/name_search/: __init__.py  models.py  views.py
webapp/webapp/webapp/journal_plugins/templates/: default_index.html  (+3 more)
webapp/webapp/webapp/migrations/: env.py
webapp/webapp/webapp/parsing/: __init__.py
webapp/webapp/webapp/templates/: base.html  delete_entry.html  entry.html  home.html  index.html  navbar.html  register.html  search_entry.html
webapp/webapp/webapp/tests/: __init__.py  test_parsing.py
(+130 files in other folders)
