[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["Christopher Chen <christopher.chen1995@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
SQLAlchemy = "^1.4.22"
Flask-Migrate = "^3.1.0"
Flask-Admin = "^1.5.8"
WTForms = "^2.3.3"
pytest = "^6.2.4"
Flask-WTF = "^0.15.1"
Flask-Bootstrap = "^3.3.7"
parsedatetime = "^2.6"
Flask-Login = "^0.5.0"
Markdown = "^3.3.4"
scrython = "^1.9.0"
python-dotenv = "^0.19.0"
Flask-Mail = "^0.9.1"
flask-marshmallow = "^0.14.0"
Flask-Security = "^3.0.0"
email-validator = "^1.1.3"
marshmallow-sqlalchemy = "^0.26.1"
WTForms-Alchemy = "^0.17.0"
requests = "^2.26.0"
pyahocorasick = "^1.4.2"
psycopg2-binary = "^2.9.1"
bcrypt = "^3.2.0"
nltk = "^3.6.5"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
